# noitad

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  meson.build  meson_options.txt
.github/workflows/: build_artifacts.yml  flatpak.yml  linux_build.yml  macos_build.yml  release.yml  windows_build.yml
build-aux/: io.github.nozwock.noitad.Devel.json
crates/noitad-cli/: Cargo.toml
crates/noitad-cli/src/: cli.rs  main.rs  utils.rs
crates/noitad-lib/: Cargo.toml
crates/noitad-lib/src/: config.rs  defines.rs  ext.rs  lib.rs  log.rs  noita.rs
crates/noitad-lib/src/noita/: mod_config.rs
data/: io.github.nozwock.noitad.desktop.in.in  io.github.nozwock.noitad.gschema.xml.in  io.github.nozwock.noitad.metainfo.xml.in.in
data/resources/: meson.build  resources.gresource.xml
data/resources/ui/: game_path_pref.blp  mod_entry_row.blp  window.blp  window.ui
po/: POTFILES.in
src/: application.rs  main.rs  models.rs  objects.rs  widgets.rs  window.rs
src/models/: config.rs  mod_.rs
src/objects/: config.rs  noita_mod.rs
src/widgets/: game_path_pref.rs  mod_entry_row.rs
