[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
rust_version = "1.82"

[profile.release]
strip = true
lto = "thin"

[profile.dev.package.backtrace]
opt-level = 3

[workspace.dependencies]
noitad-lib = { path = "crates/noitad-lib" }

directories = "5.0"
color-eyre = "0.6"
fs-err = "3.0"
serde = { version = "1.0", features = ["derive"] }
itertools = "0.13"
walkdir = "2.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
chrono = "0.4"
better_default = "1.0"

[package]
# In build-aux, runtime 47 with llvm18 seems to give issues like rust-stable/.../47 or clang not found
name = "noitad"
version = "0.1.0"
authors = ["nozwock"]
edition = "2021"

[dependencies]
noitad-lib = { path = "crates/noitad-lib" }
gettext-rs = { version = "0.7", features = ["gettext-system"] }
# note: Latest deps are in gnome nightly runtime, not the current latest stable.
gtk = { version = "0.9", package = "gtk4", features = ["gnome_47"] }
adw = { version = "0.7", package = "libadwaita", features = ["v1_6"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

color-eyre = "0.6"
itertools = "0.13"
better_default = "1.0"
