[package]
name = "noitad-cli"
version.workspace = true
edition.workspace = true
rust_version.workspace = true

[dependencies]
clap = "4.5"
noitad-lib.workspace = true
color-eyre.workspace = true
fs-err.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
