[package]
name = "noitad-cli"
version.workspace = true
edition.workspace = true
rust_version.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
inquire = "0.7"
noitad-lib.workspace = true
color-eyre.workspace = true
fs-err.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
directories.workspace = true
itertools.workspace = true
