[package]
name = "noitad-lib"
version.workspace = true
edition.workspace = true
rust_version.workspace = true

[dependencies]
confy = "0.6"
quick-xml = { version = "0.36.2", features = ["serialize"] }
directories.workspace = true
steamlocate = "1.2.1"
color-eyre.workspace = true
fs-err.workspace = true
serde.workspace = true
itertools.workspace = true
whoami = "1.5.2"
walkdir.workspace = true
tracing.workspace = true
chrono.workspace = true
better_default.workspace = true
